--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -10,8 +10,10 @@
 ---------------------------------------------------------------------*/
 .container { position:relative; top:150px; }
 .works { position:relative; float:left; top:40px; padding-left:40px; padding-right:40px; top:70px;}
-.work{ float:left;}
-.work img { width:100%; }
+.work{ float:left; }
+.work img { width:100%; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
+
+.work a:hover img {opacity:.9; width:100%; height:100%; margin:0 0 0 0}
 
 
 
@@ -154,16 +156,24 @@
 @media (min-width:1200px) and (max-width:1400px){
 	.work { width:100%;}
 	.work {	width:32.333333333333333%;}
-	.work:nth-of-type(2n) { margin-left:1.2%; }
-	.work:nth-of-type(3n) { margin-left:1.2%; }
+	.work {margin-left:1.2%; margin-bottom:1.2%;}
+	.work:nth-of-type(1) {margin-left:0%;}
+	.work:nth-of-type(4) {margin-left:0%;}
+	.work:nth-of-type(7) {margin-left:0%;}
+	.work:nth-of-type(10) {margin-left:0%;}
+	.work:nth-of-type(13) {margin-left:0%;}
 }
 
 
 /*       More than 1400px      */
 @media (min-width: 1401px) {
 	.work {	width:32.333333333333333%;}
-	.work:nth-of-type(2n) { margin-left:1.2%; }
-	.work:nth-of-type(3n) { margin-left:1.2%; }
+	.work {margin-left:1.2%; margin-bottom:1.2%;}
+	.work:nth-of-type(1) {margin-left:0%;}
+	.work:nth-of-type(4) {margin-left:0%;}
+	.work:nth-of-type(7) {margin-left:0%;}
+	.work:nth-of-type(10) {margin-left:0%;}
+	.work:nth-of-type(13) {margin-left:0%;}
 	.works {float:none; margin:auto; text-align:center; width:1321px;}
 	.about_container { float:none; width:1400px; margin:auto;}
 
